<resources>
    <string name="app_name">CT60A2411_8</string>
    <string name="textViewBottleDispenser">Bottle Dispenser</string>
    <string name="textViewMessages">Messages:</string>
    <string name="textViewEmpty"> </string>
    <string name="buttonAddMoney">Add Money</string>
    <string name="buttonBuy">Buy</string>
    <string name="buttonRefund">Refund</string>
    <string name="buttonReceipt">Receipt</string>
    <string name="textViewStarted">Started!</string>
    <string name="textViewRunning">Dispenser running...</string>
    <string name="textViewAddMoney">Adding Money...</string>
    <string name="textAddMoneyFirst">Add Money First!</string>
    <string name="textViewBuy">Buying Beverage...</string>
    <string name="textViewRefundMoney">Refund: XXX €</string>
    <string name="textViewDispenserFilled">Dispenser Filled!</string>
    <string name="textViewNoBeverages">Out of Beverages</string>
    <string name="textViewZero">0</string>
    <string name="textViewTen">10</string>
    <string name="selectionString">Select product</string>
    <string name="noReceipt">No receipt</string>
    <string name="errorWriteString">Error in writing receipt!</string>
</resources>