<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewBottleDispenser"
        android:layout_width="234dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:text="@string/textViewBottleDispenser"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAddMoney"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:onClick="pushAddMoneyButton"
        android:text="@string/buttonAddMoney"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBottleDispenser" />

    <Button
        android:id="@+id/buttonBuy"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:onClick="pushBuyButton"
        android:text="@string/buttonBuy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddMoney" />

    <Button
        android:id="@+id/buttonRefund"
        android:layout_width="125dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:onClick="pushRefundMoneyButton"
        android:text="@string/buttonRefund"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessageField" />

    <TextView
        android:id="@+id/textViewMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="140dp"
        android:text="@string/textViewMessages"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBuy" />

    <TextView
        android:id="@+id/textViewMessageField"
        android:layout_width="335dp"
        android:layout_height="107dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:background="#F1EBEB"
        android:text="@string/textViewEmpty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessages" />

    <SeekBar
        android:id="@+id/seekBarMoney"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:max="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonAddMoney"
        app:layout_constraintTop_toBottomOf="@+id/textViewBottleDispenser" />

    <TextView
        android:id="@+id/textViewZero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/textViewZero"
        app:layout_constraintBottom_toTopOf="@+id/seekBarMoney"
        app:layout_constraintStart_toEndOf="@+id/buttonAddMoney" />

    <TextView
        android:id="@+id/textViewTen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/textViewTen"
        app:layout_constraintBottom_toTopOf="@+id/seekBarMoney"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinnerBottleSelection"
        android:layout_width="214dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:background="#F1EBEB"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBuy"
        app:layout_constraintTop_toBottomOf="@+id/seekBarMoney"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonReceipt"
        android:layout_width="125dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:onClick="pushReceiptButton"
        android:text="@string/buttonReceipt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessageField" />

</androidx.constraintlayout.widget.ConstraintLayout>